tests/ui/coherence/coherence-overlap-unnormalizable-projection-0.classic.stderr
error[E0119]: conflicting implementations of trait `Trait` for type `Box<_>`
  --> $DIR/coherence-overlap-unnormalizable-projection-0.rs:27:1
   |
LL | / impl<T> Trait for T
LL | | where
LL | |     T: 'static,
LL | |     for<'a> T: WithAssoc<'a>,
LL | |     for<'a> <T as WithAssoc<'a>>::Assoc: WhereBound,
   | |____________________________________________________- first implementation here
...
LL |   impl<T> Trait for Box<T> {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Box<_>`
   |
   = note: downstream crates may implement trait `WhereBound` for type `<std::boxed::Box<_> as WithAssoc<'a>>::Assoc`
   = note: downstream crates may implement trait `WithAssoc<'a>` for type `std::boxed::Box<_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
